<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".MainAcitivy"
     >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="403dp"
                android:layout_height="671dp"
                android:orientation="vertical"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-1dp"
                tools:layout_editor_absoluteY="-1dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="216dp"
                    android:src="@drawable/image1"
                    tools:ignore="ContentDescription,MissingConstraints"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="1dp" />

                <Button
                    android:id="@+id/btVal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:text="@string/txtVal"
                    android:textColor="@color/colorAccent"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="192dp"
                    tools:layout_editor_absoluteY="298dp"
                    tools:text="Pacotes e Preços" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <Button
                    android:id="@+id/btCad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:text="@string/txtRe"
                    android:textColor="@color/colorAccent"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="231dp"
                    tools:text="Reservar" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <Button
                    android:id="@+id/btlogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:text="@string/txtlogin"
                    android:textColor="@color/colorAccent"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints,OnClick"

                    tools:layout_editor_absoluteX="192dp"
                    tools:layout_editor_absoluteY="231dp"
                    tools:text="Login / Cadastro" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <Button
                    android:id="@+id/btEqui"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:text="@string/txtEqui"
                    android:textColor="@color/colorAccent"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="298dp"
                    tools:text="Equipamentos" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <Button
                    android:id="@+id/btEnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:text="@string/txtEnd"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="376dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <Button
                    android:id="@+id/btmissoes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:text="Missões"
                    android:textColor="@color/colorAccent"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="4dp"
                    tools:layout_editor_absoluteY="447dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <Button
                    android:id="@+id/btimg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:text="@string/txtimg"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="192dp"
                    tools:layout_editor_absoluteY="376dp" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>